--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                         Deadpool's Weakness
                     </button>
                 </a>
-                <a href="contactus.html">
+                <!-- <a href="#contactus"> -->
+                <a href="contact.html">
                     <button class="btn">
                         Contact Us
                     </button>
@@ -54,7 +55,7 @@
             <div class="imgone">
                 <img src="Assets/Pic/Home1.jpg">
 
-            </div>   
+            </div>    
     </div>
     <div class="Two" id="style1">
         <div class="imgtwo">
@@ -87,48 +88,10 @@
         </div>
         <div class="imgthree">
             <img src="Assets/Pic/style2.jpg">
-
+           
         </div>    
     </div>
 
-    </div>
-    <div class="Four" id="contactus">
-        <br><br>
-        <h1>For More Information:</h1>
-        <div class="phaseone">
-            <div>
-                <h2>Name</h2>
-            </div>
-            <div>
-                <h2>Email</h2>
-            </div>
-        </div>
-        <div class="phasetwo">
-            <div class="borderone">
-
-            </div>
-            <div class="borderone">
-
-            </div>
-
-        </div>
-        <div class="phasethree">
-            <br><br>
-            <div>
-                <h2>Message</h2>
-            </div>
-            <div class="borderfour">
-
-            </div>
-        </div>
-        <div>
-            <br><br>
-
-            <button class="btntext">
-                Send Message
-            </button>
-        </div>
-    </div>
     <br><br>
     <!-- <footer class="icons"> -->
         <!-- <div class="favborder"> -->
@@ -159,7 +122,7 @@
         </div> -->
     <!-- </footer> -->
     <footer>
-        
+        <br><br>
         <div class="social">
             <ul>
                 <li>
@@ -180,6 +143,7 @@
             </ul>
         </div>
     </footer>
+    <br><br>
     <div class="designone">
         <p>
             <span>
